<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dodaj_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.szupek.datepickerszupek.dodaj_Activity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linear1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/linear1"
            android:id="@+id/linearCalosc">

            <LinearLayout
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:id="@+id/linearMiejscowosc"
                android:layout_below="@+id/linear1">

                <TextView
                    android:text="@string/MiejscowośćDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2_miejscowosc" />

                <TextView
                    android:layout_width="228dp"
                    android:layout_height="30dp"
                    android:id="@+id/editText_miejscowosc2"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearLokal">

                <TextView
                    android:text="@string/LokalDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_lokal" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editTextLokal2"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearImie">
                <TextView
                    android:text="@string/ImieDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewImie" />

                <TextView
                    android:layout_width="202dp"
                    android:layout_height="30dp"
                    android:id="@+id/editImie2"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearNazwisko">
                <TextView
                    android:text="@string/NazwiskoDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewNazwisko" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editNazwisko2"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearUklon">
                <TextView
                    android:text="@string/MiejsceUklonuDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUklon" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editUklon2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearGodzibaUklony">
                <TextView
                    android:text="@string/GodzinaUklonuDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewGodzinaUklonu" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editgodzinaUklonu2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearCena">
                <TextView
                    android:text="@string/CenaDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCena" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editCena2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearGodzinaWyjazdu">
                <TextView
                    android:text="@string/WyjazdODodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewGodzinaWyjazdu" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editGodzinaWyjazdu2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearTelefon1">
                <TextView
                    android:text="@string/PodajTelefonMlodyDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMlody" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/edittelefonMlody2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearTelefon2">
                <TextView
                    android:text="@string/PodajTelefonMlodaDodaj"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTelefonMloda" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:id="@+id/editTelefonMloda2"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearNotatki">
                <TextView
                    android:text="@string/NotatkiDodaj"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textVieNotatki" />



                <Button
                    android:text="@string/DodajBTNDodaj"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btnDodajNotatke"
                    android:onClick="DodajNotatke"
                    android:layout_height="wrap_content" />
                <Button
                    android:text="@string/PokazBTNDodaj"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearUmowa">
                <TextView
                    android:text="@string/UmowaDodaj"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUmowa" />
                <Button
                    android:text="@string/DodajUmoweBTNDodaj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonPokazUmowe"
                    android:onClick="FunkcjaPokazUmowe"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/PokazUmoweBTNDodaj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAnulujUmowe"
                    android:layout_weight="1" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearDodaj">

                <Button
                    android:text="@string/EdytujUmoweBTNDodaj"
                    android:onClick="EdytujUmowe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnEdytujUmowe"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/UsunWeseleBTNDodaj"
                    android:layout_width="wrap_content"
                    android:onClick="AnulujUmowe"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUsunWesele"
                    android:layout_weight="1" />



            </LinearLayout>





        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/linear1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/DataDodaj"
            android:layout_height="wrap_content"
            android:id="@+id/textView_data"
            android:textSize="20dp"
            android:layout_width="100dp" />

        <TextView
            android:text="@string/PodajDateDodaj"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_data2" />

    </LinearLayout>


</RelativeLayout>
